@@ -1,4 +1,5 @@
 plugin.tx_macinasearchbox_pi1 {
-	pidSearchpage = 
-	templateFile = EXT:macina_searchbox/pi1/template.htm
+    pidSearchpage = 
+    templateFile = EXT:macina_searchbox/pi1/template.html
 }
+
