@@ -2,29 +2,30 @@
 
 ########################################################################
 # Extension Manager/Repository config file for ext "macina_searchbox".
-#
-# Auto generated 08-08-2015 09:19
-#
-# Manual updates:
-# Only the data in the array - everything else is removed by next
-# writing. "version" and "dependencies" must not be touched!
 ########################################################################
 
 $EM_CONF[$_EXTKEY] = array(
-	'title' => 'Searchbox for Indexed Search Engine',
-	'description' => 'This Extension offers the possibility to add a searchbox to your Typo3 powered website which submits the searchvalue to the Indexed Search Engine  plugin. The extension has a html template which is easy to modify and supports multiple languages.',
-	'category' => 'plugin',
-	'shy' => 0,
-	'state' => 'stable',
-	'uploadfolder' => 0,
-	'createDirs' => '',
-	'clearCacheOnLoad' => 1,
-	'author' => 'Franz Holzinger',
-	'author_email' => 'franz@ttproducts.de',
-	'author_company' => 'jambage.com',
-	'CGLcompliance' => '',
-	'CGLcompliance_note' => '',
-	'version' => '2.2.0',
+    'title' => 'Searchbox for Indexed Search Engine',
+    'description' => 'This Extension offers the possibility to add a searchbox to your Typo3 powered website which submits the searchvalue to the Indexed Search Engine  plugin. The extension has a html template which is easy to modify and supports multiple languages.',
+    'category' => 'plugin',
+    'shy' => 0,
+    'state' => 'stable',
+    'uploadfolder' => 0,
+    'createDirs' => '',
+    'clearCacheOnLoad' => 1,
+    'author' => 'Franz Holzinger, Wolfgang Becker',
+    'author_email' => 'franz@ttproducts.de',
+    'author_company' => 'jambage.com',
+    'CGLcompliance' => '',
+    'CGLcompliance_note' => '',
+    'version' => '2.3.0',
+    'constraints' => array(
+        'depends' => array(
+            'php' => '5.5.0-7.99.99',
+            'typo3' => '7.6.0-8.7.99',
+        ),
+        'suggests' => array(
+            'indexed_search' => '7.6.0-8.7.99',
+        ),
+    ),
 );
-
-?>
