@@ -1,11 +1,9 @@
 <?php
-if (!defined ("TYPO3_MODE")) 	die ("Access denied.");
+defined('TYPO3_MODE') || die('Access denied.');
 
-  ## Extending TypoScript from static template uid=43 to set up userdefined tag:
-t3lib_extMgm::addTypoScript($_EXTKEY,"editorcfg","
-	tt_content.CSS_editor.ch.tx_macinasearchbox_pi1 = < plugin.tx_macinasearchbox_pi1.CSS_editor
-",43);
+if (!defined ('MACINA_SEARCHBOX_EXT')) {
+    define('MACINA_SEARCHBOX_EXT', 'macina_searchbox');
+}
 
+\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addPItoST43(MACINA_SEARCHBOX_EXT, 'pi1/class.tx_macinasearchbox_pi1.php', '_pi1', 'list_type', 1);
 
-t3lib_extMgm::addPItoST43($_EXTKEY,"pi1/class.tx_macinasearchbox_pi1.php","_pi1","list_type",1);
-?>
